--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <span class="header1">
-            <img class="imgheader" src="img/icone.png" alt="">
+            <img class="imgheader" src="icone.png" alt="">
             <h1 class="h1header">Mr Ali</h1>
         </span>
         <nav>
@@ -33,12 +33,12 @@
     </header>
     <main class="main">
      <aside>
-         <img src="img/ali1.jpg" alt="">
+         <img src="ali1.jpg" alt="">
          <h1 class="asideh1">Ali Alamoury</h1>
          <div class="main-contact">
-             <a href="https://www.facebook.com/ali.al.amouri961"> <img src="img/facebook.png" alt=""></a>
-             <a href="https://www.instagram.com/Ali.Al_Amoury"> <img src="img/instagram.png" alt=""></a>
-             <a href="https://www.youtube.com/channel/UCpTm1MACueV2fteZOfjk-ig/videos"> <img src="img/youtube.png" alt=""></a>
+             <a href="https://www.facebook.com/ali.al.amouri961"> <img src="facebook.png" alt=""></a>
+             <a href="https://www.instagram.com/Ali.Al_Amoury"> <img src="instagram.png" alt=""></a>
+             <a href="https://www.youtube.com/channel/UCpTm1MACueV2fteZOfjk-ig/videos"> <img src="youtube.png" alt=""></a>
          </div>
      </aside>
      <article class="article1">
